# sdlengine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hello.kra
include/: engine.hpp  sdlvideo.hpp
src/: CMakeLists.txt  helloSDL.cxx  helloSDL.hxx
src/sdlvideo/: CMakeLists.txt  ImgSurface.cxx  ImgSurface.hxx
